--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "npm-run-all -p nodemon browsersync",
+    "nodemon": "nodemon server.js",
+    "browsersync": "browser-sync start --proxy http://localhost:4500 --files 'public,views'"
   },
   "keywords": [],
   "author": "Carolina Alves Branquinho",
@@ -15,6 +17,8 @@
     "nunjucks": "^3.2.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "browser-sync": "^2.26.10",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5"
   }
 }
